# network_connectivity_bridge

./: CHANGELOG.md  LICENSE  Package.swift  README.md  build.gradle  local.properties  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  (+1 more)
ios/: network_connectivity_bridge.podspec
ios/Classes/: NetworkConnectivityBridgePlugin.swift
lib/: network_connectivity_bridge.dart  network_connectivity_bridge_method_channel.dart  network_connectivity_bridge_platform_interface.dart  network_connectivity_bridge_web.dart
linux/: CMakeLists.txt  network_connectivity_bridge_plugin.cc  network_connectivity_bridge_plugin.h
macos/: Package.swift  network_connectivity_bridge.podspec  network_connectivity_bridge_plugin.h  network_connectivity_bridge_plugin.m
macos/Classes/: NetworkConnectivityBridgePlugin.h  NetworkConnectivityBridgePlugin.swift
windows/: CMakeLists.txt  network_connectivity_bridge_plugin.cpp  network_connectivity_bridge_plugin.h
(+8 files in other folders)
